export interface MiddleWareDTO {
  id: string;

  name: string;
}
